@@ -1,9 +1,7 @@
 const genericAlarm = require('./genericAlarm.js');
-const minecraft = require('./minecraft.js');
 
 const alarms = [
 	genericAlarm,
-	minecraft
 ];
 
 const start = (args) => alarms.forEach((alarm) => alarm.start(args));
