@@ -11,6 +11,8 @@ const run = ({messageText, sendMessage}) => {
 }
 
 const patchNotes =
+	'2020/07/24\n' +
+	'• Minecraft functionality removed in favor of a dedicated Minecraft bot.\n' +
 	'2020/07/22\n' +
 	'• Bot can execute commands on a different channel than it was invoked on.\n' +
 	'• Bot can handle multiple meta-commands on one command.\n' +
